[project]
name = "todo"
version = "0.1.0"
description = ""
authors = [
    {name = "Kucherenko Ivan"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.120.1,<0.121.0)",
    "redis (>=7.0.1,<8.0.0)",
    "pyjwt[crypto] (>=2.10.1,<3.0.0)",
    "pydantic[settings] (>=2.12.3,<3.0.0)",
    "pydantic-settings (>=2.11.0,<3.0.0)",
]

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
